[package]
name = "arrow_util"
version = "0.1.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/alttch/arrow-util"
description = "Tools for Apache Arrow"
readme = "README.md"
keywords = ["arrow", "dataframe", "database", "convert"]

[dependencies]
arrow2 = { version = "0.17.0", features = ["io_ipc"] }
chrono = "0.4.24"
polars = { version = "0.28.0", optional = true }
sqlx = { version = "0.6.3", features = ["chrono", "postgres", "runtime-tokio-native-tls"], optional = true }

[lib]
name = "arrow_util"
path = "src/lib.rs"

[features]
full = ["sqlx", "polars"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]
