[package]
name = "myval"
version = "0.1.14"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/alttch/myval"
description = "https://docs.rs/myval"
readme = "README.md"
keywords = ["arrow", "dataframe", "database", "convert"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
arrow2 = { version = "0.17.0", features = ["io_ipc"], optional = true }
arrow2_ih = { version = "0.17.0", package = "arrow2", git = "https://github.com/divi255/arrow2", features = ["io_ipc"], optional = true }
async-stream = { version = "0.3.5", optional = true }
chrono = "0.4.24"
futures = { version = "0.3.28", optional = true }
polars = { version = "0.28.0", optional = true }
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }
sqlx = { version = "0.6.3", features = ["chrono", "postgres", "runtime-tokio-native-tls"], optional = true }

[lib]
name = "myval"
path = "src/lib.rs"

[features]
default = ["arrow2"]
postgres = ["sqlx", "serde_json", "serde", "async-stream", "futures"]
full = ["default", "postgres", "polars"]
